// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a select input with options 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  cursor: pointer;
}

@supports (-moz-appearance:none) {
  .c0 {
    line-height: 1.375rem;
  }
}

@media (min-width:31.25em) {
  .c0 {
    width: auto;
  }
}

<select
  className="-select c0"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as disabled for default select input 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .jHTYw .input__Input-sc-14xvxp6-0,
  .jHTYw .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:31.25em) {
  .ibmUJp .input__Input-sc-14xvxp6-0,
  .ibmUJp .c0 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@supports (-moz-appearance:none) {
  .c1 {
    line-height: 1.375rem;
  }
}

@media (min-width:31.25em) {
  .c1 {
    width: auto;
  }
}

<select
  className="-select c0 c1"
  disabled={true}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as full-width for default select input 1`] = `
.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .jHTYw .input__Input-sc-14xvxp6-0,
  .jHTYw .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:31.25em) {
  .ibmUJp .input__Input-sc-14xvxp6-0,
  .ibmUJp .c0 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@supports (-moz-appearance:none) {
  .c1 {
    line-height: 1.375rem;
  }
}

<select
  className="-select c0 c1"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders with label above the input 1`] = `
.c0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c1:hover:not(:focus) {
  border-color: #5A5F65;
}

.c1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c1:invalid,
.c1:-moz-ui-invalid {
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  cursor: pointer;
}

@supports (-moz-appearance:none) {
  .c1 {
    line-height: 1.375rem;
  }
}

@media (min-width:31.25em) {
  .c1 {
    width: auto;
  }
}

<label
  className=""
>
  <span
    className="c0"
  >
    Example label
  </span>
  <select
    className="-select c1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout evenly spaced by default 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c3 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c3::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3:hover:not(:focus) {
  border-color: #5A5F65;
}

.c3:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c3:invalid,
.c3:-moz-ui-invalid {
  box-shadow: none;
}

.c3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:hover:enabled,
.c3:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .c1 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .input__Input-sc-14xvxp6-0,
  .c0 .c2 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@supports (-moz-appearance:none) {
  .c3 {
    line-height: 1.375rem;
  }
}

@media (min-width:31.25em) {
  .c3 {
    width: auto;
  }
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    Example label
  </span>
  <select
    className="-select c2 c3"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout with adjusted input size 1`] = `
.c1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c3 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697A2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconChevronDown-sc-1fhmtbh-0 dwCgBY'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-right: 2.5rem;
  background-size: 0.625rem;
  border-radius: 100px;
}

.c3::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c3:hover:not(:focus) {
  border-color: #5A5F65;
}

.c3:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c3:invalid,
.c3:-moz-ui-invalid {
  box-shadow: none;
}

.c3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3:hover:enabled,
.c3:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .c1 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

@media (min-width:31.25em) {
  .jHTYw .input__Input-sc-14xvxp6-0,
  .jHTYw .c2 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:31.25em) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .input__Input-sc-14xvxp6-0,
  .c0 .c2 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@supports (-moz-appearance:none) {
  .c3 {
    line-height: 1.375rem;
  }
}

@media (min-width:31.25em) {
  .c3 {
    width: auto;
  }
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    Example label
  </span>
  <select
    className="-select c2 c3"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;
